--- a/all_magazine 2020.html
+++ b/all_magazine 2020.html
@@ -32,7 +32,7 @@
             <header class="header">
                 <h1>All Magazine</h1>
                 <div class="headerPic">
-                    <a href="all_magazine.html"><img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/2de0de9ad50cfd53ef72f61f55172e294d67382a/material/magazine/NewPage_Magazine-title-PC%202.svg" alt="Header Picture"></a>
+                    <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/2de0de9ad50cfd53ef72f61f55172e294d67382a/material/magazine/NewPage_Magazine-title-PC%202.svg" alt="Header Picture">
                 </div>
             </header>
             <main>
@@ -50,10 +50,10 @@
                                     <a href="all_magazine 2019.html">2019年</a>
                                 </li>
                                 <li>
-                                    <a href="#">2018年</a>
+                                    <a href="story_southArea.html">2018年</a>
                                 </li>
                                 <li>
-                                    <a href="#">2017年</a>
+                                    <a href="story_eastArea.html">2017年</a>
                                 </li>
                             </ol>
                                 
@@ -115,7 +115,7 @@
                                     </li>
                                     <li>
                                         <div class="magazinePic">
-                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2020_06_Acut.png" alt="">
+                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2020_06-2.png" alt="">
                                         </div>
                                         <button class="moreBtn">
                                             <a href="#">2020年6月</a>
@@ -123,7 +123,7 @@
                                     </li>
                                     <li>
                                         <div class="magazinePic">
-                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2020_05.png" alt="">
+                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2020_05.jpeg" alt="">
                                         </div>
                                         <button class="moreBtn">
                                             <a href="#">2020年5月</a>
@@ -134,7 +134,7 @@
                                     <h2>All Magazine List</h2>
                                     <li>
                                         <div class="magazinePic">
-                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2020_04.png" alt="">
+                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2020_04.jpeg" alt="">
                                         </div>
                                         <button class="moreBtn">
                                             <a href="#">2020年4月</a>
@@ -142,7 +142,7 @@
                                     </li>
                                     <li>
                                         <div class="magazinePic">
-                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2020_03.png" alt="">
+                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2020_03.jpeg" alt="">
                                         </div>
                                         <button class="moreBtn">
                                             <a href="#">2020年3月</a>
@@ -200,10 +200,10 @@
                     <h2>Aside Navigation</h2>
                     <ul class="asideNavBarList">
                         <li>
-                           <a href="index.html#issueId"><span>各期雜誌</span></a>
+                           <a href="all_magazine.html"><span>各期雜誌</span></a>
                         </li>
                         <li>
-                            <a href="index.html#salesId"><span>銷售群像</span></a>
+                            <a href="story_allArea.html"><span>銷售群像</span></a>
                         </li>
                         <li>
                             <a href="index.html#aboutId"><span>關於大誌</span></a>
