--- a/all_magazine 2021.html
+++ b/all_magazine 2021.html
@@ -30,7 +30,51 @@
     <div class="allContent">
         <div class="asideContent">
             <header class="header">
-                <h1>All Magazine</h1>
+                <h1>All Magazine 2021</h1>
+                <div class="mobileDevice">
+                <input class="headerMenu" type="checkbox" name="" id="headerMenuCtrl">
+                <!-- 為什麼input 沒有使用 display none，會跳回最頂端？ -->
+                <div class="mobileNavBar">
+                    <div class="logo">
+                        <a href="index.html">
+                            <img class="menuOpenLogo" src="material/logo/LOGO-wt.svg" alt="Big Issue Logo">
+                        </a>
+                    </div>
+                </div> 
+                <label class="menuCtrl" for="headerMenuCtrl">Menu</label>
+                <nav class="navWrap">
+                    <h2>Navigation</h2>
+                    <ul class="mobileNavBarList">
+                        <li>
+                            <a class="closeMenu" href="#issueId"><span>各期雜誌</span></a>
+                        </li>
+                        <li>
+                            <a class="closeMenu" href="#salesId"><span>銷售群像</span></a>
+                        </li>
+                        <li>
+                            <a class="closeMenu" href="#aboutId"><span>關於大誌</span></a>
+                        </li>
+                        <li>
+                            <a class="closeMenu" href="#supportId"><span>支持訂閱</span></a>
+                        </li>
+                        <li>
+                            <a class="closeMenu" href="#salePointsId"><span>販售場所</span></a>
+                        </li>
+                        <li class="menuIcon">
+                            <a href="https://www.facebook.com/bigissue.tw">
+                                <i class="fab fa-facebook"></i>
+                            </a>
+                            <a href="https://www.instagram.com/bigissue.tw/">
+                                <i class="fab fa-instagram"></i>
+                            </a>
+                            <a href="mailto:service@bigissue.tw">
+                                <i class="far fa-envelope"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+                <div class="mobileDivider"></div>
+                </div>
                 <div class="headerPic">
                     <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/2de0de9ad50cfd53ef72f61f55172e294d67382a/material/magazine/NewPage_Magazine-title-PC%202.svg" alt="Header Picture">
                 </div>
@@ -225,10 +269,10 @@
                     <h2>Aside Navigation</h2>
                     <ul class="asideNavBarList">
                         <li>
-                           <a href="index.html#issueId"><span>各期雜誌</span></a>
+                           <a href="all_magazine.html"><span>各期雜誌</span></a>
                         </li>
                         <li>
-                            <a href="index.html#salesId"><span>銷售群像</span></a>
+                            <a href="story_allArea.html"><span>銷售群像</span></a>
                         </li>
                         <li>
                             <a href="index.html#aboutId"><span>關於大誌</span></a>
