--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta property="og:side_name" content="">
     <meta property="fb:app_id" content="">
 
-    <title>The Big Issue</title>
+    <title>The Big Issue Taiwan</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <link rel="stylesheet" href="css/reset.css">
@@ -47,28 +47,28 @@
                     <h2>Navigation</h2>
                     <ul class="mobileNavBarList">
                         <li>
-                            <a class="closeMenu" href="#issueId"><span>各期雜誌</span></a>
+                            <a class="closeMenu" href="all_magazine.html"><span>各期雜誌</span></a>
                         </li>
                         <li>
-                            <a class="closeMenu" href="#salesId"><span>銷售群像</span></a>
+                            <a class="closeMenu" href="story_allArea.html"><span>銷售群像</span></a>
                         </li>
                         <li>
-                            <a class="closeMenu" href="#aboutId"><span>關於大誌</span></a>
+                            <a class="closeMenu" href="index.html#aboutId"><span>關於大誌</span></a>
                         </li>
                         <li>
-                            <a class="closeMenu" href="#supportId"><span>支持訂閱</span></a>
+                            <a class="closeMenu" href="index.html#supportId"><span>支持訂閱</span></a>
                         </li>
                         <li>
-                            <a class="closeMenu" href="#salePointsId"><span>販售場所</span></a>
+                            <a class="closeMenu" href="index.html#salePointsId"><span>販售場所</span></a>
                         </li>
                         <li class="menuIcon">
-                            <a href="#">
+                            <a href="https://www.facebook.com/bigissue.tw">
                                 <i class="fab fa-facebook"></i>
                             </a>
-                            <a href="#">
+                            <a href="https://www.instagram.com/bigissue.tw/">
                                 <i class="fab fa-instagram"></i>
                             </a>
-                            <a href="#">
+                            <a href="mailto:service@bigissue.tw">
                                 <i class="far fa-envelope"></i>
                             </a>
                         </li>
@@ -112,15 +112,6 @@
                         </div>
                         <div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
                             <div class="carousel-inner">
-                                <!-- <div class="carousel-item active" data-interval="4000">
-                                    <img class="showLightBox" src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2020_07.jpg" class="d-block w-100" alt="...">
-                                    <div class="pcCarousel animate__animated animate__fadeInUp">
-                                        <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/8ac7ff3acd67cc95fdcc5b12252c3e2ed0d7a681/material/magazine/section_01_Magzine_main_txt_PC-7.svg">
-                                    </div>
-                                    <div class="mobileCarousel animate__animated animate__fadeInUp">
-                                        <img src="material/magazine/section_01_Magzine_main_txt_PAD-6.svg" alt="">
-                                    </div>
-                                </div> -->
                                 <div class="carousel-item active" data-interval="4000">
                                     <img class="showLightBox" src="material/magazine/Mag_2020_06_A.jpeg" class="d-block w-100" alt="...">
                                     <div class="pcCarousel animate__animated animate__fadeInUp">
@@ -388,17 +379,17 @@
                             <ol class="supportList">
                                 <h2>Subscription List</h2>
                                 <li>
-                                    <a href="https://docs.google.com/forms/d/e/1FAIpQLScLhUIVvMp2sS8o_OknFUCrglvROvbQ5PiH1okvh6-0ojbRqg/viewform">
+                                    <a href="#">
                                         <img src="material/01-PC/05-support/support_A.svg" alt="">
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="https://docs.google.com/forms/d/e/1FAIpQLScLhUIVvMp2sS8o_OknFUCrglvROvbQ5PiH1okvh6-0ojbRqg/viewform">
+                                    <a href="#">
                                         <img src="material/01-PC/05-support/support_B.svg">
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="https://docs.google.com/forms/d/e/1FAIpQLScLhUIVvMp2sS8o_OknFUCrglvROvbQ5PiH1okvh6-0ojbRqg/viewform">
+                                    <a href="#">
                                         <img src="material/01-PC/05-support/support_C.svg" alt="">
                                     </a>
                                 </li>
@@ -406,7 +397,7 @@
                         </div>
                     </div>
                     <button class="moreBtn">
-                        <a href="https://docs.google.com/forms/d/e/1FAIpQLScLhUIVvMp2sS8o_OknFUCrglvROvbQ5PiH1okvh6-0ojbRqg/viewform">我要訂閱</a>
+                        <a href="#">我要訂閱</a>
                     </button>
                 </section>
 
@@ -502,19 +493,19 @@
                     <h2>Aside Navigation</h2>
                     <ul class="asideNavBarList">
                         <li>
-                           <a href="#issueId"><span>各期雜誌</span></a>
+                           <a href="all_magazine.html"><span>各期雜誌</span></a>
                         </li>
                         <li>
-                            <a href="#salesId"><span>銷售群像</span></a>
+                            <a href="story_allArea.html"><span>銷售群像</span></a>
                         </li>
                         <li>
-                            <a href="#aboutId"><span>關於大誌</span></a>
+                            <a href="index.html#aboutId"><span>關於大誌</span></a>
                         </li>
                         <li>
-                            <a href="#supportId"><span>支持訂閱</span></a>
+                            <a href="index.html#supportId"><span>支持訂閱</span></a>
                         </li>
                         <li>
-                            <a href="#salePointsId"><span>販售場所</span></a>
+                            <a href="index.html#salePointsId"><span>販售場所</span></a>
                         </li>
                         <li>
                             <a href="#"><span>回到頂端</span></a>
@@ -537,21 +528,18 @@
                     <li>
                         <ul class="footerSocial">
                             <li>
-                                <a href="https://zh-tw.facebook.com/bigissue.tw">
-                                    <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/aa5682bc9e55b6bacee82e516c90a2724e25e310/material/01-PC/07-footer/icon_fb.svg"
-                                        alt="">
+                                <a href="https://www.facebook.com/bigissue.tw">
+                                    <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/aa5682bc9e55b6bacee82e516c90a2724e25e310/material/01-PC/07-footer/icon_fb.svg" alt="">
                                 </a>
                             </li>
                             <li>
                                 <a href="https://www.instagram.com/bigissue.tw/">
-                                    <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/aa5682bc9e55b6bacee82e516c90a2724e25e310/material/01-PC/07-footer/icon_ig.svg"
-                                        alt="">
+                                    <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/aa5682bc9e55b6bacee82e516c90a2724e25e310/material/01-PC/07-footer/icon_ig.svg" alt="">
                                 </a>
                             </li>
                             <li>
-                                <a href="mailto:service@bigissue.tw">
-                                    <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/aa5682bc9e55b6bacee82e516c90a2724e25e310/material/01-PC/07-footer/icon_email.svg"
-                                        alt="">
+                                <a href="#">
+                                    <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/aa5682bc9e55b6bacee82e516c90a2724e25e310/material/01-PC/07-footer/icon_email.svg" alt="">
                                 </a>
                             </li>
                         </ul>
