--- a/all_magazine 2019.html
+++ b/all_magazine 2019.html
@@ -18,7 +18,7 @@
     <meta property="og:side_name" content="">
     <meta property="fb:app_id" content="">
 
-    <title>All Magazine</title>
+    <title>All Magazine 2019</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <link rel="stylesheet" href="css/reset.css">
@@ -30,9 +30,53 @@
     <div class="allContent">
         <div class="asideContent">
             <header class="header">
-                <h1>All Magazine</h1>
+                <h1>All Magazine 2019</h1>
+                <div class="mobileDevice">
+                <input class="headerMenu" type="checkbox" name="" id="headerMenuCtrl">
+                <!-- 為什麼input 沒有使用 display none，會跳回最頂端？ -->
+                <div class="mobileNavBar">
+                    <div class="logo">
+                        <a href="index.html">
+                            <img class="menuOpenLogo" src="material/logo/LOGO-wt.svg" alt="Big Issue Logo">
+                        </a>
+                    </div>
+                </div> 
+                <label class="menuCtrl" for="headerMenuCtrl">Menu</label>
+                <nav class="navWrap">
+                    <h2>Navigation</h2>
+                    <ul class="mobileNavBarList">
+                        <li>
+                            <a class="closeMenu" href="#issueId"><span>各期雜誌</span></a>
+                        </li>
+                        <li>
+                            <a class="closeMenu" href="#salesId"><span>銷售群像</span></a>
+                        </li>
+                        <li>
+                            <a class="closeMenu" href="#aboutId"><span>關於大誌</span></a>
+                        </li>
+                        <li>
+                            <a class="closeMenu" href="#supportId"><span>支持訂閱</span></a>
+                        </li>
+                        <li>
+                            <a class="closeMenu" href="#salePointsId"><span>販售場所</span></a>
+                        </li>
+                        <li class="menuIcon">
+                            <a href="https://www.facebook.com/bigissue.tw">
+                                <i class="fab fa-facebook"></i>
+                            </a>
+                            <a href="https://www.instagram.com/bigissue.tw/">
+                                <i class="fab fa-instagram"></i>
+                            </a>
+                            <a href="mailto:service@bigissue.tw">
+                                <i class="far fa-envelope"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+                <div class="mobileDivider"></div>
+                </div>
                 <div class="headerPic">
-                    <a href="all_magazine.html"><img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/2de0de9ad50cfd53ef72f61f55172e294d67382a/material/magazine/NewPage_Magazine-title-PC%202.svg" alt="Header Picture"></a>
+                    <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/2de0de9ad50cfd53ef72f61f55172e294d67382a/material/magazine/NewPage_Magazine-title-PC%202.svg" alt="Header Picture">
                 </div>
             </header>
             <main>
@@ -115,7 +159,7 @@
                                     </li>
                                     <li>
                                         <div class="magazinePic">
-                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2019_11cut.png" alt="">
+                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2019_11.png" alt="">
                                         </div>
                                         <button class="moreBtn">
                                             <a href="#">2019年11月</a>
@@ -149,18 +193,18 @@
                                         </button>
                                     <li>
                                         <div class="magazinePic">
-                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2019_07cut.png" alt="">
+                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2019_07.png" alt="">
                                         </div>
                                         <button class="moreBtn">
                                             <a href="#">2019年7月</a>
                                         </button>
                                     </li>
                                 </ol>
-                                <!-- <ol class="allMagazineList">
+                                <ol class="allMagazineList">
                                     <h2>All Magazine List</h2>
                                     <li>
                                         <div class="magazinePic">
-                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2019_08.png" alt="">
+                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_other.png" alt="">
                                         </div>
                                         <button class="moreBtn">
                                             <a href="#">2019年6月</a>
@@ -168,7 +212,7 @@
                                     </li>
                                     <li>
                                         <div class="magazinePic">
-                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2019_07cut.png" alt="">
+                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_other_2.png" alt="">
                                         </div>
                                         <button class="moreBtn">
                                             <a href="#">2019年5月</a>
@@ -176,7 +220,7 @@
                                     </li>
                                     <li>
                                         <div class="magazinePic">
-                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2019_09.png" alt="">
+                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_other_2.png" alt="">
                                         </div>
                                         <button class="moreBtn">
                                             <a href="#">2019年4月</a>
@@ -209,7 +253,7 @@
                                             <a href="#">2019年1月</a>
                                         </button>
                                     </li>
-                                </ol> -->
+                                </ol>
                             </div>
                         </div>
                     </div>
@@ -225,10 +269,10 @@
                     <h2>Aside Navigation</h2>
                     <ul class="asideNavBarList">
                         <li>
-                           <a href="index.html#issueId"><span>各期雜誌</span></a>
+                           <a href="all_magazine.html"><span>各期雜誌</span></a>
                         </li>
                         <li>
-                            <a href="index.html#salesId"><span>銷售群像</span></a>
+                            <a href="story_allArea.html"><span>銷售群像</span></a>
                         </li>
                         <li>
                             <a href="index.html#aboutId"><span>關於大誌</span></a>
