--- a/all_magazine.html
+++ b/all_magazine.html
@@ -29,11 +29,55 @@
     
     <div class="allContent">
         <div class="asideContent">
-            <header class="header">
+            <header class="header magazineHeader">
                 <h1>All Magazine</h1>
+                <div class="mobileDevice">
+                <input class="headerMenu" type="checkbox" name="" id="headerMenuCtrl">
+                <!-- 為什麼input 沒有使用 display none，會跳回最頂端？ -->
+                <div class="mobileNavBar">
+                    <div class="logo">
+                        <a href="index.html">
+                            <img class="menuOpenLogo" src="material/logo/LOGO-wt.svg" alt="Big Issue Logo">
+                        </a>
+                    </div>
+                </div> 
+                <label class="menuCtrl" for="headerMenuCtrl">Menu</label>
+                <nav class="navWrap">
+                    <h2>Navigation</h2>
+                    <ul class="mobileNavBarList">
+                        <li>
+                            <a class="closeMenu" href="#issueId"><span>各期雜誌</span></a>
+                        </li>
+                        <li>
+                            <a class="closeMenu" href="#salesId"><span>銷售群像</span></a>
+                        </li>
+                        <li>
+                            <a class="closeMenu" href="#aboutId"><span>關於大誌</span></a>
+                        </li>
+                        <li>
+                            <a class="closeMenu" href="#supportId"><span>支持訂閱</span></a>
+                        </li>
+                        <li>
+                            <a class="closeMenu" href="#salePointsId"><span>販售場所</span></a>
+                        </li>
+                        <li class="menuIcon">
+                            <a href="https://www.facebook.com/bigissue.tw">
+                                <i class="fab fa-facebook"></i>
+                            </a>
+                            <a href="https://www.instagram.com/bigissue.tw/">
+                                <i class="fab fa-instagram"></i>
+                            </a>
+                            <a href="mailto:service@bigissue.tw">
+                                <i class="far fa-envelope"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+                <div class="mobileDivider"></div>
+                </div>
                 <div class="headerPic">
-                    <a href="all_magazine.html"><img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/2de0de9ad50cfd53ef72f61f55172e294d67382a/material/magazine/NewPage_Magazine-title-PC%202.svg" alt="Header Picture"></a>
-                    
+                    <img class="pcHeaderPic" src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/2de0de9ad50cfd53ef72f61f55172e294d67382a/material/magazine/NewPage_Magazine-title-PC%202.svg" alt="Header Picture">
+                    <img class="mobileHeaderPic" src="material/02-PAD/01-magzin/pad-magazine.svg" alt="">
                 </div>
             </header>
             <main>
@@ -62,7 +106,7 @@
                         <div class="magazineContent">
                             <ol class="magazineBreadCrumb">
                                 <li>
-                                    <a href="index.html#issueId"><span>HOME</span></a>
+                                    <a href="index.html"><span>HOME</span></a>
                                 </li>
                                 <li>
                                     <i class="fas fa-caret-right"></i>
@@ -96,29 +140,29 @@
                                     </ol>
                                 </li>
                             </ol>
-                            <!-- <ol class="mobileSelectYears">
+                            <ol class="mobileSelectYears">
                                 <li>
-                                    <a href="all_magazine.html">全部年份</a>
+                                    <a href="all_magazine 2020.html"><span>2020年</span></a>
                                 </li>
                                 <li>
-                                    <a href="all_magazine 2020.html">2020年</a>
+                                    <a href="all_magazine 2019.html"><span>2019年</span></a>
                                 </li>
                                 <li>
-                                    <a href="all_magazine 2019.html">2019年</a>
+                                    <a href="#"><span>2018年</span></a>
                                 </li>
                                 <li>
-                                    <a href="story_southArea.html">2018年</a>
+                                    <a href="#"><span>2017年</span></a>
                                 </li>
                                 <li>
-                                    <a href="story_eastArea.html">2017年</a>
+                                    <a href="#"><span>2016年</span></a>
                                 </li>
-                            </ol> -->
+                            </ol>
                             <div class="allMagazine">
                                 <ol class="allMagazineList">
                                     <h2>All Magazine List</h2>
                                     <li>
                                         <div class="magazinePic">
-                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2020_07.png" alt="">
+                                            <img src="material/magazine/Mag_2020_07.png" alt="">
                                         </div>
                                         <button class="moreBtn">
                                             <a href="#">2020年7月</a>
@@ -126,7 +170,7 @@
                                     </li>
                                     <li>
                                         <div class="magazinePic">
-                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2020_06_Acut.png" alt="">
+                                            <img src="material/magazine//Mag_2020_06_Acut.png" alt="">
                                         </div>
                                         <button class="moreBtn">
                                             <a href="#">2020年6月</a>
@@ -134,7 +178,7 @@
                                     </li>
                                     <li>
                                         <div class="magazinePic">
-                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2020_05.png" alt="">
+                                            <img src="material/magazine/Mag_2020_05.png" alt="">
                                         </div>
                                         <button class="moreBtn">
                                             <a href="#">2020年5月</a>
@@ -145,7 +189,7 @@
                                     <h2>All Magazine List</h2>
                                     <li>
                                         <div class="magazinePic">
-                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2020_04.png" alt="">
+                                            <img src="material/magazine/Mag_2020_04.png" alt="">
                                         </div>
                                         <button class="moreBtn">
                                             <a href="#">2020年4月</a>
@@ -153,7 +197,7 @@
                                     </li>
                                     <li>
                                         <div class="magazinePic">
-                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2020_03.png" alt="">
+                                            <img src="material/magazine/Mag_2020_03.png" alt="">
                                         </div>
                                         <button class="moreBtn">
                                             <a href="#">2020年3月</a>
@@ -161,7 +205,7 @@
                                     </li>
                                     <li>
                                         <div class="magazinePic">
-                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2020_02.png" alt="">
+                                            <img src="material/magazine/Mag_2020_02.png" alt="">
                                         </div>
                                         <button class="moreBtn">
                                             <a href="#">2020年2月</a>
@@ -172,7 +216,7 @@
                                     <h2>All Magazine List</h2>
                                     <li>
                                         <div class="magazinePic">
-                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2020_01.png" alt="">
+                                            <img src="material/magazine/Mag_2020_01.png" alt="">
                                         </div>
                                         <button class="moreBtn">
                                             <a href="#">2020年1月</a>
@@ -180,7 +224,7 @@
                                     </li>
                                     <li>
                                         <div class="magazinePic">
-                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2019_12.png" alt="">
+                                            <img src="material/magazine/Mag_2019_12.png" alt="">
                                         </div>
                                         <button class="moreBtn">
                                             <a href="#">2019年12月</a>
@@ -188,7 +232,7 @@
                                     </li>
                                     <li>
                                         <div class="magazinePic">
-                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2019_11cut.png" alt="">
+                                            <img src="material/magazine/Mag_2019_11cut.png" alt="">
                                         </div>
                                         <button class="moreBtn">
                                             <a href="#">2019年11月</a>
@@ -199,7 +243,7 @@
                                     <h2>All Magazine List</h2>
                                     <li>
                                         <div class="magazinePic">
-                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2019_10.png" alt="">
+                                            <img src="material/magazine/Mag_2019_10.png" alt="">
                                         </div>
                                         <button class="moreBtn">
                                             <a href="#">2019年10月</a>
@@ -207,7 +251,7 @@
                                     </li>
                                     <li>
                                         <div class="magazinePic">
-                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2019_09.png" alt="">
+                                            <img src="material/magazine/Mag_2019_09.png" alt="">
                                         </div>
                                         <button class="moreBtn">
                                             <a href="#">2019年9月</a>
@@ -215,7 +259,7 @@
                                     </li>
                                     <li>
                                         <div class="magazinePic">
-                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2019_08.png" alt="">
+                                            <img src="material/magazine/Mag_2019_08.png" alt="">
                                         </div>
                                         <button class="moreBtn">
                                             <a href="#">2019年8月</a>
@@ -226,15 +270,15 @@
                                     <h2>All Magazine List</h2>
                                     <li>
                                         <div class="magazinePic">
-                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2019_07cut.png" alt="">
+                                            <img src="material/magazine/Mag_2019_07cut.png" alt="">
                                         </div>
                                         <button class="moreBtn">
                                             <a href="#">2019年7月</a>
                                         </button>
                                     </li>
-                                    <!-- <li>
+                                    <li>
                                         <div class="magazinePic">
-                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_other.png" alt="">
+                                            <img src="material/magazine/Mag_2019_07cut.png" alt="">
                                         </div>
                                         <button class="moreBtn">
                                             <a href="#">2019年6月</a>
@@ -242,7 +286,7 @@
                                     </li>
                                     <li>
                                         <div class="magazinePic">
-                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_other_2.png" alt="">
+                                            <img src="material/magazine/Mag_2019_07cut.png" alt="">
                                         </div>
                                         <button class="moreBtn">
                                             <a href="#">2019年5月</a>
@@ -253,7 +297,7 @@
                                     <h2>All Magazine List</h2>
                                     <li>
                                         <div class="magazinePic">
-                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_other_2.png" alt="">
+                                            <img src="material/magazine/Mag_2019_07cut.png" alt="">
                                         </div>
                                         <button class="moreBtn">
                                             <a href="#">2019年4月</a>
@@ -261,7 +305,7 @@
                                     </li>
                                     <li>
                                         <div class="magazinePic">
-                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_other.png" alt="">
+                                            <img src="material/magazine/Mag_2019_07cut.png" alt="">
                                         </div>
                                         <button class="moreBtn">
                                             <a href="#">2019年3月</a>
@@ -269,13 +313,13 @@
                                     </li>
                                     <li>
                                         <div class="magazinePic">
-                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_other_2.png" alt="">
+                                            <img src="material/magazine/Mag_2019_07cut.png" alt="">
                                         </div>
                                         <button class="moreBtn">
                                             <a href="#">2019年2月</a>
                                         </button>
                                     </li>
-                                </ol> -->
+                                </ol>
                             </div>
                         </div>
                     </div>
@@ -291,10 +335,10 @@
                     <h2>Aside Navigation</h2>
                     <ul class="asideNavBarList">
                         <li>
-                           <a href="index.html#issueId"><span>各期雜誌</span></a>
+                           <a href="all_magazine.html"><span>各期雜誌</span></a>
                         </li>
                         <li>
-                            <a href="index.html#salesId"><span>銷售群像</span></a>
+                            <a href="story_allArea.html"><span>銷售群像</span></a>
                         </li>
                         <li>
                             <a href="index.html#aboutId"><span>關於大誌</span></a>
@@ -302,13 +346,11 @@
                         <li>
                             <a href="index.html#supportId"><span>支持訂閱</span></a>
                         </li>
-                            <a href="index.html#supportId"><span>訂閱支持</span></a>
-                        </li>
                         <li>
                             <a href="index.html#salePointsId"><span>販售場所</span></a>
                         </li>
                         <li>
-                            <a href="all_magazine.html"><span>回到頂端</span></a>
+                            <a href="#"><span>回到頂端</span></a>
                         </li>
                     </ul>
                 </nav>
