--- a/story_TaichungEslite.html
+++ b/story_TaichungEslite.html
@@ -30,7 +30,51 @@
     <div class="allContent">
         <div class="asideContent">
             <header class="header">
-                <h1>Story</h1>
+                <h1>台中勤美誠品</h1>
+                <div class="mobileDevice">
+                <input class="headerMenu" type="checkbox" name="" id="headerMenuCtrl">
+                <!-- 為什麼input 沒有使用 display none，會跳回最頂端？ -->
+                <div class="mobileNavBar">
+                    <div class="logo">
+                        <a href="index.html">
+                            <img class="menuOpenLogo" src="material/logo/LOGO-wt.svg" alt="Big Issue Logo">
+                        </a>
+                    </div>
+                </div> 
+                <label class="menuCtrl" for="headerMenuCtrl">Menu</label>
+                <nav class="navWrap">
+                    <h2>Navigation</h2>
+                    <ul class="mobileNavBarList">
+                        <li>
+                            <a class="closeMenu" href="#issueId"><span>各期雜誌</span></a>
+                        </li>
+                        <li>
+                            <a class="closeMenu" href="#salesId"><span>銷售群像</span></a>
+                        </li>
+                        <li>
+                            <a class="closeMenu" href="#aboutId"><span>關於大誌</span></a>
+                        </li>
+                        <li>
+                            <a class="closeMenu" href="#supportId"><span>支持訂閱</span></a>
+                        </li>
+                        <li>
+                            <a class="closeMenu" href="#salePointsId"><span>販售場所</span></a>
+                        </li>
+                        <li class="menuIcon">
+                            <a href="https://www.facebook.com/bigissue.tw">
+                                <i class="fab fa-facebook"></i>
+                            </a>
+                            <a href="https://www.instagram.com/bigissue.tw/">
+                                <i class="fab fa-instagram"></i>
+                            </a>
+                            <a href="mailto:service@bigissue.tw">
+                                <i class="far fa-envelope"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+                <div class="mobileDivider"></div>
+                </div>
                 <div class="headerPic">
                      <a href="story_allArea.html">
                         <img class="pcHeaderPic" src="material/01-PC/03-story/NewPage_story-title-PC.svg" alt="Header Picture">
@@ -60,7 +104,7 @@
                         <div class="storyContent">
                             <ol class="storyBreadCrumb">
                                 <li>
-                                    <a href="index.html"><span>HOME</span></a>
+                                    <a href="story_allArea.html"><span>全部地區</span></a>
                                 </li>
                                 <li>
                                     <i class="fas fa-caret-right"></i>
@@ -74,6 +118,17 @@
                                 <!-- 區域所在位置名稱 -->
                                 <li>
                                     <a href="story_TaichungEslite.html"><span>勤美誠品</span></a>
+                                </li>
+                            </ol>
+                            <ol class="mobileStorytBreadCrumb">
+                                <li>
+                                    <a href="story_ HsinchuTrainStation.html"><span>上一則</span></a>
+                                </li>
+                                <li>
+                                    <a href="story_TaichungEslite.html"><span>本則</span></a>
+                                </li>
+                                <li>
+                                    <a href="story_YunlinYunTech.html"><span>下一則</span></a>
                                 </li>
                             </ol>
                             <article>
@@ -120,23 +175,23 @@
                     <h2>Aside Navigation</h2>
                     <ul class="asideNavBarList">
                         <li>
-                            <a href="index.html#issueId"><span>各期雜誌</span></a>
-                         </li>
-                         <li>
-                             <a href="index.html#salesId"><span>銷售群像</span></a>
-                         </li>
-                         <li>
-                             <a href="index.html#aboutId"><span>關於大誌</span></a>
-                         </li>
-                         <li>
-                             <a href="index.html#supportId"><span>支持訂閱</span></a>
-                         </li>
-                         <li>
-                             <a href="index.html#salePointsId"><span>販售場所</span></a>
-                         </li>
-                         <li>
-                             <a href="story_TaichungEslite.html"><span>回到頂端</span></a>
-                         </li>
+                           <a href="all_magazine.html"><span>各期雜誌</span></a>
+                        </li>
+                        <li>
+                            <a href="story_allArea.html"><span>銷售群像</span></a>
+                        </li>
+                        <li>
+                            <a href="index.html#aboutId"><span>關於大誌</span></a>
+                        </li>
+                        <li>
+                            <a href="index.html#supportId"><span>支持訂閱</span></a>
+                        </li>
+                        <li>
+                            <a href="index.html#salePointsId"><span>販售場所</span></a>
+                        </li>
+                        <li>
+                            <a href="#"><span>回到頂端</span></a>
+                        </li>
                     </ul>
                 </nav>
         </div>
