--- a/story_TainanNCKU.html
+++ b/story_TainanNCKU.html
@@ -1,4 +1,3 @@
-D
 <!DOCTYPE html>
 <html lang="en">
 
@@ -23,7 +22,7 @@ D
     <meta property="og:side_name" content="">
     <meta property="fb:app_id" content="">
 
-    <title>Story Tainan NCKU</title>
+    <title>台南成大光復校區&台南應用科大</title>
     <link rel="stylesheet"
         href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
@@ -41,7 +40,50 @@ D
     <div class="allContent">
         <div class="asideContent">
             <header class="header">
-                <h1>Story</h1>
+                <h1>台南成大光復校區&台南應用科大</h1>
+                <div class="mobileDevice">
+                <input class="headerMenu" type="checkbox" name="" id="headerMenuCtrl">
+                <div class="mobileNavBar">
+                    <div class="logo">
+                        <a href="index.html">
+                            <img class="menuOpenLogo" src="material/logo/LOGO-wt.svg" alt="Big Issue Logo">
+                        </a>
+                    </div>
+                </div> 
+                <label class="menuCtrl" for="headerMenuCtrl">Menu</label>
+                <nav class="navWrap">
+                    <h2>Navigation</h2>
+                    <ul class="mobileNavBarList">
+                        <li>
+                            <a class="closeMenu" href="#issueId"><span>各期雜誌</span></a>
+                        </li>
+                        <li>
+                            <a class="closeMenu" href="#salesId"><span>銷售群像</span></a>
+                        </li>
+                        <li>
+                            <a class="closeMenu" href="#aboutId"><span>關於大誌</span></a>
+                        </li>
+                        <li>
+                            <a class="closeMenu" href="#supportId"><span>支持訂閱</span></a>
+                        </li>
+                        <li>
+                            <a class="closeMenu" href="#salePointsId"><span>販售場所</span></a>
+                        </li>
+                        <li class="menuIcon">
+                            <a href="https://www.facebook.com/bigissue.tw">
+                                <i class="fab fa-facebook"></i>
+                            </a>
+                            <a href="https://www.instagram.com/bigissue.tw/">
+                                <i class="fab fa-instagram"></i>
+                            </a>
+                            <a href="mailto:service@bigissue.tw">
+                                <i class="far fa-envelope"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+                <div class="mobileDivider"></div>
+                </div>
                 <div class="headerPic">
                      <a href="story_allArea.html">
                         <img class="pcHeaderPic" src="material/01-PC/03-story/NewPage_story-title-PC.svg" alt="Header Picture">
@@ -71,20 +113,31 @@ D
                         <div class="storyContent">
                             <ol class="storyBreadCrumb">
                                 <li>
-                                    <a href="index.html"><span>HOME</span></a>
+                                    <a href="story_allArea.html"><span>全區</span></a>
                                 </li>
                                 <li>
                                     <i class="fas fa-caret-right"></i>
                                 </li>
                                 <li>
-                                    <a href="story_southArea.html"><span>南部地區</span></a>
+                                    <a href="story_southArea.html"><span>南區</span></a>
                                 </li>
                                 <li>
                                     <i class="fas fa-caret-right"></i>
                                 </li>
                                 <!-- 區域所在位置名稱 -->
                                 <li>
-                                    <a href="story_TainanNCKU.html"><span>台南成大光復校區&台南應用科大</span></a>
+                                    <a href="story_TainanNCKU.html"><span>成大光復校區&應用科大</span></a>
+                                </li>
+                            </ol>
+                            <ol class="mobileStorytBreadCrumb">
+                                <li>
+                                    <a href="story_ DouliuTrainStation.html"><span>上一則</span></a>
+                                </li>
+                                <li>
+                                    <a href="story_TainanNCKU.html"><span>本則</span></a>
+                                </li>
+                                <li>
+                                    <a href="story_ KaohsiungCity.html"><span>下一則</span></a>
                                 </li>
                             </ol>
                             <article>
@@ -147,23 +200,23 @@ D
                     <h2>Aside Navigation</h2>
                     <ul class="asideNavBarList">
                         <li>
-                            <a href="index.html#issueId"><span>各期雜誌</span></a>
-                         </li>
-                         <li>
-                             <a href="index.html#salesId"><span>銷售群像</span></a>
-                         </li>
-                         <li>
-                             <a href="index.html#aboutId"><span>關於大誌</span></a>
-                         </li>
-                         <li>
-                             <a href="index.html#supportId"><span>支持訂閱</span></a>
-                         </li>
-                         <li>
-                             <a href="index.html#salePointsId"><span>販售場所</span></a>
-                         </li>
-                         <li>
-                             <a href="story_TainanNCKU.html"><span>回到頂端</span></a>
-                         </li>
+                           <a href="all_magazine.html"><span>各期雜誌</span></a>
+                        </li>
+                        <li>
+                            <a href="story_allArea.html"><span>銷售群像</span></a>
+                        </li>
+                        <li>
+                            <a href="index.html#aboutId"><span>關於大誌</span></a>
+                        </li>
+                        <li>
+                            <a href="index.html#supportId"><span>支持訂閱</span></a>
+                        </li>
+                        <li>
+                            <a href="index.html#salePointsId"><span>販售場所</span></a>
+                        </li>
+                        <li>
+                            <a href="#"><span>回到頂端</span></a>
+                        </li>
                     </ul>
                 </nav>
         </div>
@@ -174,8 +227,8 @@ D
                 <ul class="footerInfo">
                     <li>
                         <div class="fooerLogo">
-                            <a href="index.html"><img a src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/01-PC/07-footer/fotterLogo.png?raw=true"
-                                alt=""></a>
+                            <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/01-PC/07-footer/fotterLogo.png?raw=true"
+                                alt="">
                         </div>
                     </li>
                     <li>
