--- a/story_TaipeiYuanshan.html
+++ b/story_TaipeiYuanshan.html
@@ -20,7 +20,7 @@
     <meta property="og:side_name" content="">
     <meta property="fb:app_id" content="">
 
-    <title>Story Taipei Yuanshan</title>
+    <title>台北捷運圓山站</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
@@ -34,7 +34,50 @@
     <div class="allContent">
         <div class="asideContent">
             <header class="header">
-                <h1>Story</h1>
+                <h1>台北捷運圓山站</h1>
+                <div class="mobileDevice">
+                <input class="headerMenu" type="checkbox" name="" id="headerMenuCtrl">
+                <div class="mobileNavBar">
+                    <div class="logo">
+                        <a href="index.html">
+                            <img class="menuOpenLogo" src="material/logo/LOGO-wt.svg" alt="Big Issue Logo">
+                        </a>
+                    </div>
+                </div> 
+                <label class="menuCtrl" for="headerMenuCtrl">Menu</label>
+                <nav class="navWrap">
+                    <h2>Navigation</h2>
+                    <ul class="mobileNavBarList">
+                        <li>
+                            <a class="closeMenu" href="#issueId"><span>各期雜誌</span></a>
+                        </li>
+                        <li>
+                            <a class="closeMenu" href="#salesId"><span>銷售群像</span></a>
+                        </li>
+                        <li>
+                            <a class="closeMenu" href="#aboutId"><span>關於大誌</span></a>
+                        </li>
+                        <li>
+                            <a class="closeMenu" href="#supportId"><span>支持訂閱</span></a>
+                        </li>
+                        <li>
+                            <a class="closeMenu" href="#salePointsId"><span>販售場所</span></a>
+                        </li>
+                        <li class="menuIcon">
+                            <a href="https://www.facebook.com/bigissue.tw">
+                                <i class="fab fa-facebook"></i>
+                            </a>
+                            <a href="https://www.instagram.com/bigissue.tw/">
+                                <i class="fab fa-instagram"></i>
+                            </a>
+                            <a href="mailto:service@bigissue.tw">
+                                <i class="far fa-envelope"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+                <div class="mobileDivider"></div>
+                </div>
                 <div class="headerPic">
                      <a href="story_allArea.html">
                         <img class="pcHeaderPic" src="material/01-PC/03-story/NewPage_story-title-PC.svg" alt="Header Picture">
@@ -64,7 +107,7 @@
                         <div class="storyContent">
                             <ol class="storyBreadCrumb">
                                 <li>
-                                    <a href="index.html"><span>HOME</span></a>
+                                    <a href="story_allArea.html"><span>全部地區</span></a>
                                 </li>
                                 <li>
                                     <i class="fas fa-caret-right"></i>
@@ -78,6 +121,17 @@
                                 <!-- 區域所在位置名稱 -->
                                 <li>
                                     <a href="story_TaipeiYuanshan.html"><span>台北捷運圓山站</span></a>
+                                </li>
+                            </ol>
+                            <ol class="mobileStorytBreadCrumb">
+                                <li>
+                                    <a href="story_ KaohsiungCity.html"><span>上一則</span></a>
+                                </li>
+                                <li>
+                                    <a href="story_TaipeiYuanshan.html"><span>本則</span></a>
+                                </li>
+                                <li>
+                                    <a href="story_TaipeiLongshanTemple.html"><span>下一則</span></a>
                                 </li>
                             </ol>
                             <article>
@@ -136,23 +190,23 @@
                     <h2>Aside Navigation</h2>
                     <ul class="asideNavBarList">
                         <li>
-                            <a href="index.html#issueId"><span>各期雜誌</span></a>
-                         </li>
-                         <li>
-                             <a href="index.html#salesId"><span>銷售群像</span></a>
-                         </li>
-                         <li>
-                             <a href="index.html#aboutId"><span>關於大誌</span></a>
-                         </li>
-                         <li>
-                             <a href="index.html#supportId"><span>支持訂閱</span></a>
-                         </li>
-                         <li>
-                             <a href="index.html#salePointsId"><span>販售場所</span></a>
-                         </li>
-                         <li>
-                             <a href="story_TaipeiYuanshan.html"><span>回到頂端</span></a>
-                         </li>
+                           <a href="all_magazine.html"><span>各期雜誌</span></a>
+                        </li>
+                        <li>
+                            <a href="story_allArea.html"><span>銷售群像</span></a>
+                        </li>
+                        <li>
+                            <a href="index.html#aboutId"><span>關於大誌</span></a>
+                        </li>
+                        <li>
+                            <a href="index.html#supportId"><span>支持訂閱</span></a>
+                        </li>
+                        <li>
+                            <a href="index.html#salePointsId"><span>販售場所</span></a>
+                        </li>
+                        <li>
+                            <a href="#"><span>回到頂端</span></a>
+                        </li>
                     </ul>
                 </nav>
         </div>
