--- a/story_YunlinYunTech.html
+++ b/story_YunlinYunTech.html
@@ -20,7 +20,7 @@
     <meta property="og:side_name" content="">
     <meta property="fb:app_id" content="">
 
-    <title>Story Taichung Eslite</title>
+    <title>雲林科技大學</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
@@ -34,7 +34,50 @@
     <div class="allContent">
         <div class="asideContent">
             <header class="header">
-                <h1>Story</h1>
+                <h1>雲林科技大學</h1>
+                <div class="mobileDevice">
+                <input class="headerMenu" type="checkbox" name="" id="headerMenuCtrl">
+                <div class="mobileNavBar">
+                    <div class="logo">
+                        <a href="index.html">
+                            <img class="menuOpenLogo" src="material/logo/LOGO-wt.svg" alt="Big Issue Logo">
+                        </a>
+                    </div>
+                </div> 
+                <label class="menuCtrl" for="headerMenuCtrl">Menu</label>
+                <nav class="navWrap">
+                    <h2>Navigation</h2>
+                    <ul class="mobileNavBarList">
+                        <li>
+                            <a class="closeMenu" href="#issueId"><span>各期雜誌</span></a>
+                        </li>
+                        <li>
+                            <a class="closeMenu" href="#salesId"><span>銷售群像</span></a>
+                        </li>
+                        <li>
+                            <a class="closeMenu" href="#aboutId"><span>關於大誌</span></a>
+                        </li>
+                        <li>
+                            <a class="closeMenu" href="#supportId"><span>支持訂閱</span></a>
+                        </li>
+                        <li>
+                            <a class="closeMenu" href="#salePointsId"><span>販售場所</span></a>
+                        </li>
+                        <li class="menuIcon">
+                            <a href="https://www.facebook.com/bigissue.tw">
+                                <i class="fab fa-facebook"></i>
+                            </a>
+                            <a href="https://www.instagram.com/bigissue.tw/">
+                                <i class="fab fa-instagram"></i>
+                            </a>
+                            <a href="mailto:service@bigissue.tw">
+                                <i class="far fa-envelope"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+                <div class="mobileDivider"></div>
+                </div>
                 <div class="headerPic">
                     <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/01-PC/03-story/NewPage_story-title-PC.png?raw=true"
                         alt="Header Picture">
@@ -60,7 +103,7 @@
                         <div class="storyContent">
                             <ol class="storyBreadCrumb">
                                 <li>
-                                    <a href="index.html"><span>HOME</span></a>
+                                    <a href="story_allArea.html"><span>全部地區</span></a>
                                 </li>
                                 <li>
                                     <i class="fas fa-caret-right"></i>
@@ -74,6 +117,17 @@
                                 <!-- 區域所在位置名稱 -->
                                 <li>
                                     <a href="story_TaicungYunTech.html"><span>雲林科技大學</span></a>
+                                </li>
+                            </ol>
+                            <ol class="mobileStorytBreadCrumb">
+                                <li>
+                                    <a href="story_TaicungYunTech.html"><span>上一則</span></a>
+                                </li>
+                                <li>
+                                    <a href="story_TaipeiNTUH.html"><span>本則</span></a>
+                                </li>
+                                <li>
+                                    <a href="story_ DouliuTrainStation.html"><span>下一則</span></a>
                                 </li>
                             </ol>
                             <article>
@@ -134,32 +188,32 @@
         </div>
 
         <div class="asideBar">
-            <div class="asideLogo">
-                <a href="index.html"><img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/logo/Nav_logo-01.png?raw=true" alt="Aside Big Issue Logo"></a>
-            </div>
-            <nav>
-                <h2>Aside Navigation</h2>
-                <ul class="asideNavBarList">
-                    <li>
-                        <a href="index.html#issueId"><span>各期雜誌</span></a>
-                     </li>
-                     <li>
-                         <a href="index.html#salesId"><span>銷售群像</span></a>
-                     </li>
-                     <li>
-                         <a href="index.html#aboutId"><span>關於大誌</span></a>
-                     </li>
-                     <li>
-                         <a href="index.html#supportId"><span>支持訂閱</span></a>
-                     </li>
-                     <li>
-                         <a href="index.html#salePointsId"><span>販售場所</span></a>
-                     </li>
-                     <li>
-                         <a href="story_YunlinYunTech.html"><span>回到頂端</span></a>
-                     </li>
-                </ul>
-            </nav>
+                <div class="asideLogo">
+                    <a href="index.html"><img src="material/logo/Nav_logo-01.png" alt="Aside Big Issue Logo"></a>
+                </div>
+                <nav>
+                    <h2>Aside Navigation</h2>
+                    <ul class="asideNavBarList">
+                        <li>
+                           <a href="all_magazine.html"><span>各期雜誌</span></a>
+                        </li>
+                        <li>
+                            <a href="story_allArea.html"><span>銷售群像</span></a>
+                        </li>
+                        <li>
+                            <a href="index.html#aboutId"><span>關於大誌</span></a>
+                        </li>
+                        <li>
+                            <a href="index.html#supportId"><span>支持訂閱</span></a>
+                        </li>
+                        <li>
+                            <a href="index.html#salePointsId"><span>販售場所</span></a>
+                        </li>
+                        <li>
+                            <a href="#"><span>回到頂端</span></a>
+                        </li>
+                    </ul>
+                </nav>
         </div>
     </div>
     <footer class="footer">
@@ -168,25 +222,26 @@
                 <ul class="footerInfo">
                     <li>
                         <div class="fooerLogo">
-                            <a href="index.html"><img src="material/logo/Nav_logo-01.png" alt="Aside Big Issue Logo"></a>
+                            <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/01-PC/07-footer/fotterLogo.png?raw=true"
+                                alt="">
                         </div>
                     </li>
                     <li>
                         <ul class="footerSocial">
                             <li>
-                                <a href="#">
+                                <a href="https://www.facebook.com/bigissue.tw">
                                     <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/aa5682bc9e55b6bacee82e516c90a2724e25e310/material/01-PC/07-footer/icon_fb.svg"
                                         alt="">
                                 </a>
                             </li>
                             <li>
-                                <a href="#">
+                                <a href="https://www.instagram.com/bigissue.tw/">
                                     <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/aa5682bc9e55b6bacee82e516c90a2724e25e310/material/01-PC/07-footer/icon_ig.svg"
                                         alt="">
                                 </a>
                             </li>
                             <li>
-                                <a href="#">
+                                <a href="mailto:service@bigissue.tw">
                                     <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/aa5682bc9e55b6bacee82e516c90a2724e25e310/material/01-PC/07-footer/icon_email.svg"
                                         alt="">
                                 </a>
