--- a/story_allArea.html
+++ b/story_allArea.html
@@ -31,6 +31,50 @@
         <div class="asideContent">
             <header class="header">
                 <h1>所有地區故事</h1>
+                <div class="mobileDevice">
+                <input class="headerMenu" type="checkbox" name="" id="headerMenuCtrl">
+                <!-- 為什麼input 沒有使用 display none，會跳回最頂端？ -->
+                <div class="mobileNavBar">
+                    <div class="logo">
+                        <a href="index.html">
+                            <img class="menuOpenLogo" src="material/logo/LOGO-wt.svg" alt="Big Issue Logo">
+                        </a>
+                    </div>
+                </div> 
+                <label class="menuCtrl" for="headerMenuCtrl">Menu</label>
+                <nav class="navWrap">
+                    <h2>Navigation</h2>
+                    <ul class="mobileNavBarList">
+                        <li>
+                            <a class="closeMenu" href="all_magazine.html"><span>各期雜誌</span></a>
+                        </li>
+                        <li>
+                            <a class="closeMenu" href="story_allArea.html"><span>銷售群像</span></a>
+                        </li>
+                        <li>
+                            <a class="closeMenu" href="index.html#aboutId"><span>關於大誌</span></a>
+                        </li>
+                        <li>
+                            <a class="closeMenu" href="index.html#supportId"><span>支持訂閱</span></a>
+                        </li>
+                        <li>
+                            <a class="closeMenu" href="index.html#salePointsId"><span>販售場所</span></a>
+                        </li>
+                        <li class="menuIcon">
+                            <a href="https://www.facebook.com/bigissue.tw">
+                                <i class="fab fa-facebook"></i>
+                            </a>
+                            <a href="https://www.instagram.com/bigissue.tw/">
+                                <i class="fab fa-instagram"></i>
+                            </a>
+                            <a href="mailto:service@bigissue.tw">
+                                <i class="far fa-envelope"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+                <div class="mobileDivider"></div>
+                </div>
                 <div class="headerPic">
                     <a href="story_allArea.html">
                         <img class="pcHeaderPic" src="material/01-PC/03-story/NewPage_story-title-PC.svg" alt="Header Picture">
@@ -66,7 +110,7 @@
                         <div class="storyContent">
                             <ol class="storyBreadCrumb">
                                 <li>
-                                    <a href="index.html#issueId"><span>HOME</span></a>
+                                    <a href="index.html"><span>首頁</span></a>
                                 </li>
                                 <li>
                                     <i class="fas fa-caret-right"></i>
@@ -104,19 +148,19 @@
                             <div class="allStory">
                                 <ol class="mobileSelect">
                                     <li>
-                                        <a href="story_allArea.html">全部地區</a>
+                                        <a href="story_allArea.html">全區</a>
                                     </li>
                                     <li>
-                                        <a href="story_northArea.html">北部地區</a>
+                                        <a href="story_northArea.html">北區</a>
                                     </li>
                                     <li>
-                                        <a href="story_centralArea.html">中部地區</a>
+                                        <a href="story_centralArea.html">中區</a>
                                     </li>
                                     <li>
-                                        <a href="story_southArea.html">南部地區</a>
+                                        <a href="story_southArea.html">南區</a>
                                     </li>
                                     <li>
-                                        <a href="story_eastArea.html">東部地區</a>
+                                        <a href="story_eastArea.html">東區</a>
                                     </li>
                                     <li>
                                         <a href="story_otherArea.html">海外</a>
@@ -285,10 +329,10 @@
                     <h2>Aside Navigation</h2>
                     <ul class="asideNavBarList">
                         <li>
-                           <a href="index.html#issueId"><span>各期雜誌</span></a>
+                           <a href="all_magazine.html"><span>各期雜誌</span></a>
                         </li>
                         <li>
-                            <a href="index.html#salesId"><span>銷售群像</span></a>
+                            <a href="story_allArea.html"><span>銷售群像</span></a>
                         </li>
                         <li>
                             <a href="index.html#aboutId"><span>關於大誌</span></a>
@@ -300,7 +344,7 @@
                             <a href="index.html#salePointsId"><span>販售場所</span></a>
                         </li>
                         <li>
-                            <a href="story_allArea.html"><span>回到頂端</span></a>
+                            <a href="#"><span>回到頂端</span></a>
                         </li>
                     </ul>
                 </nav>
