--- a/all_magazine.html
+++ b/all_magazine.html
@@ -33,7 +33,6 @@
                 <h1>All Magazine</h1>
                 <div class="mobileDevice">
                 <input class="headerMenu" type="checkbox" name="" id="headerMenuCtrl">
-                <!-- 為什麼input 沒有使用 display none，會跳回最頂端？ -->
                 <div class="mobileNavBar">
                     <div class="logo">
                         <a href="index.html">
@@ -46,19 +45,19 @@
                     <h2>Navigation</h2>
                     <ul class="mobileNavBarList">
                         <li>
-                            <a class="closeMenu" href="#issueId"><span>各期雜誌</span></a>
+                            <a class="closeMenu" href="all_magazine.html"><span>各期雜誌</span></a>
                         </li>
                         <li>
-                            <a class="closeMenu" href="#salesId"><span>銷售群像</span></a>
+                            <a class="closeMenu" href="story_allArea.html"><span>銷售群像</span></a>
                         </li>
                         <li>
-                            <a class="closeMenu" href="#aboutId"><span>關於大誌</span></a>
+                            <a class="closeMenu" href="index.html#aboutId"><span>關於大誌</span></a>
                         </li>
                         <li>
-                            <a class="closeMenu" href="#supportId"><span>支持訂閱</span></a>
+                            <a class="closeMenu" href="index.html#supportId"><span>支持訂閱</span></a>
                         </li>
                         <li>
-                            <a class="closeMenu" href="#salePointsId"><span>販售場所</span></a>
+                            <a class="closeMenu" href="index.html#salePointsId"><span>販售場所</span></a>
                         </li>
                         <li class="menuIcon">
                             <a href="https://www.facebook.com/bigissue.tw">
@@ -74,6 +73,14 @@
                     </ul>
                 </nav>
                 <div class="mobileDivider"></div>
+                <div class="mobileHeaderBanner">
+                    <div class="mobileImpression animate__animated animate__fadeInRight">
+                        <img src="material/02-PAD/00-banner/banner.svg" alt="">
+                    </div>
+                    <div class="mobileBigLogo animate__animated animate__slideInDown">
+                        <img src="material/02-PAD/00-banner/logo.svg" alt="">
+                    </div>
+                </div>
                 </div>
                 <div class="headerPic">
                     <img class="pcHeaderPic" src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/2de0de9ad50cfd53ef72f61f55172e294d67382a/material/magazine/NewPage_Magazine-title-PC%202.svg" alt="Header Picture">
